# phatbot

./: README.md  env.example  package.json
contracts/phatbot_controller/: Cargo.toml  lib.rs
contracts/phatbot_profile/: Cargo.toml  lib.rs  nft.abi.json
src/: bot.ts  constants.ts  discord.ts  middleware.ts  phatbot_controller.json  phatbot_profile.json  utils.ts
src/app/: layout.tsx  page.tsx
src/app/api/bind/: route.ts
src/app/api/commands/: route.ts
src/app/api/interactions/: route.ts
src/app/api/notify/[id]/: route.ts
src/app/api/notify_all/: route.ts
src/app/api/run/: route.ts
src/app/api/tlg/: route.ts
src/app/bind/[slug]/: _components.tsx  page.tsx  phatbot_profile.json  signAndSend.ts
src/pages/api/: interactions.ts
